Adjust margin on header to stop collapsing on ios

--- a/css/main.css
+++ b/css/main.css
@@ -444,7 +444,7 @@ form {
       align-self: center; }
 
 .header-intro {
-  margin: 160px auto;
+  margin: 96px auto;
   padding: 8px;
   max-width: 450px;
   display: -webkit-box;
@@ -459,6 +459,9 @@ form {
       -ms-flex: 1;
           flex: 1;
   text-shadow: -1px -1px 0 #3e494d, 1px -1px 0 #3e494d, -1px 1px 0 #3e494d, 1px 1px 0 #3e494d; }
+  @media only screen and (min-width: 768px) {
+    .header-intro {
+      margin: 160px auto; } }
   .header-intro p {
     margin: 16px;
     padding: 8px 0; }
